[metadata]
name = pyphashml
version = 0.0.1
author = David Starkweather
author_email = starkd88@gmail.com
description = Image phashML Package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/starkdg/pyphashml
classifiers =
			Programming Language :: Python :: 3
			License :: OSI Approved :: MIT License
			Operating System :: OS Independent

[options]
package_dir=
	=src
packages=find:
python_requires = >=3.7
install_requires =
	bitstring>=3
	numpy>=1.19
	tensorflow>=1.14,<2
	redis>=3
zip_safe = False

[options.packages.find]
where = src

[options.package_data]
*  = *.pb