[metadata]
name = pyphashml
version = 0.1.0
author = DGStarkweather
author_email = starkdg@gmx.com
description = pHashML Image Perceptual Hash
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/starkdg/pyphashml
project_urls =
			 Bug Tracker = https://github.com/starkdg/pyphashml/issues
classifiers =
			Programming Language :: Python :: 3
			License :: OSI Approved :: Apache Software License
			Operating System :: OS Independent
			Topic :: Scientific/Engineering :: Image Recognition
			Intended Audience :: Information Technology
			Intended Audience :: Developers

[options]
package_dir=
	=src
packages=find:
python_requires = >=3.7
install_requires =
	bitstring>=3
	numpy>=1.19
	tensorflow>=1.14,<2
	redis>=3
zip_safe = False

[options.packages.find]
where = src

[options.package_data]
*  = *.pb